[gd_scene load_steps=12 format=3 uid="uid://cdejg1jnooprl"]

[ext_resource type="Script" path="res://screens/activities/02/tasks/pronunciation_mechanics.gd" id="1_sjowt"]
[ext_resource type="Texture2D" uid="uid://egqqe6djklih" path="res://assets/images/player/yellow.png" id="2_40psf"]
[ext_resource type="PackedScene" uid="uid://due721y15oqyk" path="res://components/next_button.tscn" id="2_p8qsi"]
[ext_resource type="Script" path="res://scripts/prediction_component.gd" id="2_uetdv"]
[ext_resource type="Texture2D" uid="uid://bb3sqbr251bwp" path="res://assets/images/wooden_platform.png" id="3_y31xh"]
[ext_resource type="FontFile" uid="uid://cogryc0bfmmla" path="res://assets/fonts/Poppins-SemiBold.ttf" id="4_qi13f"]
[ext_resource type="Texture2D" uid="uid://diahj4kk2g3ww" path="res://assets/images/shapes/circle.png" id="5_07naf"]

[sub_resource type="Animation" id="Animation_kf0l6"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0.666956, 0.666957)]
}

[sub_resource type="Animation" id="Animation_lyai3"]
resource_name = "jump"
length = 2.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.3, 0.6, 1.1, 1.2, 1.4),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 0,
"values": [Vector2(0, 0), Vector2(0, 21.8542), Vector2(0, -10.6459), Vector2(291, -269), Vector2(291, -244.323), Vector2(291, -258.323)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.3, 0.6, 1.1, 1.2, 1.4),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 0,
"values": [Vector2(0.666956, 0.666957), Vector2(0.666956, 0.514663), Vector2(0.666956, 0.741144), Vector2(0.666956, 0.741144), Vector2(0.666956, 0.569179), Vector2(0.666956, 0.66674)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_l7eig"]
_data = {
"RESET": SubResource("Animation_kf0l6"),
"jump": SubResource("Animation_lyai3")
}

[sub_resource type="AudioStreamMicrophone" id="AudioStreamMicrophone_lgnta"]

[node name="PronunciationMechanics" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_sjowt")

[node name="Container" type="Control" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Platform" type="Sprite2D" parent="Container"]
position = Vector2(208, 714.245)
scale = Vector2(0.631148, 0.631148)
texture = ExtResource("3_y31xh")

[node name="FinalPlatform" type="Sprite2D" parent="Container"]
position = Vector2(498, 460.245)
scale = Vector2(0.631, 0.631)
texture = ExtResource("3_y31xh")

[node name="Label" type="Label" parent="Container/FinalPlatform"]
offset_left = -76.0697
offset_top = -295.159
offset_right = 59.9303
offset_bottom = -12.1593
theme_override_colors/font_color = Color(0.133333, 0.133333, 0.133333, 1)
theme_override_fonts/font = ExtResource("4_qi13f")
theme_override_font_sizes/font_size = 200
text = "a"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Player" type="Node2D" parent="Container"]
position = Vector2(203, 605)

[node name="Sprite2D" type="Sprite2D" parent="Container/Player"]
scale = Vector2(0.666956, 0.666957)
texture = ExtResource("2_40psf")

[node name="PlayerAnimator" type="AnimationPlayer" parent="Container/Player"]
libraries = {
"": SubResource("AnimationLibrary_l7eig")
}

[node name="RecordButton" type="TextureButton" parent="Container"]
self_modulate = Color(0.133333, 0.133333, 0.133333, 1)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -85.0
offset_top = 258.0
offset_right = 85.0
offset_bottom = 428.0
grow_horizontal = 2
grow_vertical = 2
pivot_offset = Vector2(85, 85)
texture_normal = ExtResource("5_07naf")
ignore_texture_size = true
stretch_mode = 0

[node name="NextButton" parent="." instance=ExtResource("2_p8qsi")]
layout_mode = 1
offset_left = 69.0
offset_top = 1141.0
offset_right = 651.0
offset_bottom = 1231.0

[node name="PredictionComponent" type="HTTPRequest" parent="."]
script = ExtResource("2_uetdv")

[node name="AudioStreamRecord" type="AudioStreamPlayer" parent="."]
stream = SubResource("AudioStreamMicrophone_lgnta")
autoplay = true
bus = &"Record"

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]

[node name="Button" type="Button" parent="."]
layout_mode = 0
offset_left = 510.0
offset_top = 852.0
offset_right = 668.0
offset_bottom = 981.0

[connection signal="pressed" from="Button" to="." method="_on_button_pressed"]
